add documentation for forgot password
