# app/Http/Controllers/API/Auth/ForgotPasswordController.php
@@ -18,6 +18,65 @@ class ForgotPasswordController extends Controller
     }
 
     /**
+     * @OA\POST(
+     *      path="auth/password/forgot",
+     *      tags={"Auth"},
+     *      description="Send link for recovery password.",
+     *      summary="Send recovery password link",
+     *      operationId="forgotPassword",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="multipart/form-data",
+     *              @OA\Schema(
+     *                  @OA\Property(
+     *                      property="email",
+     *                      type="string"
+     *                  ),
+     *                  required={"email"}
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Link sended",
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string",
+     *                  example="success"
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="User access errors",
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string",
+     *                  example="User is registered through Facebook.|You are not pet owner."
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="422",
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  type="string",
+     *                  property="message",
+     *              ),
+     *              @OA\Property(
+     *                  type="object",
+     *                  property="errors",
+     *                  @OA\Property(type="array", property="parameter", @OA\Items(type="string",description="message"))
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    /**
      * Handle the incoming request.
      *
      * @param ForgotPasswordRequest $request
@@ -32,7 +91,7 @@ class ForgotPasswordController extends Controller
             throw new NotOwnerException();
 
         if($user->isFacebookUser())
-            return response()->json(['message' => 'User is registered through Facebook.'], 403);
+            return response()->json(['message' => 'User is registered through Facebook.'], 401);
 
         $broker = Password::broker();
         $token = $broker->createToken($user);
